--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@tailwindcss/postcss": "^4.1.18",
         "@tailwindcss/vite": "^4.1.18"
     }
 }
